@@ -33,6 +33,7 @@ importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,segments)
+importFrom(numDeriv,grad)
 importFrom(statmod,qres.nbinom)
 importFrom(statmod,qres.tweedie)
 importFrom(statmod,qresid)
