@@ -2,6 +2,7 @@ dsm news!
 
 # 2.2.12
  * The alpha argument now works for analytical variance reported using dsm.var.prop and dsm.var.gam print.summary and summary methods. Thanks to Jason Roberts for spotting this issue.
+ * dsm now uses numDeriv::grad to calculate derivatives for variance estimation -- this should be much faster. Thanks to Jason Roberts for this fix.
 
 # 2.2.11
  * dsm.var.prop uses update() rather than messing around with eval()
